--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "prettier": "^3.3.3",
     "prisma": "^5.18.0"
   }
 }
